[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/TutorialScene.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Credits/GameTitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Credits/CreditsSubtitle.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Image/tutorial1.PNG" type="Texture" id=4]
[ext_resource path="res://Resources/Image/arrow_transition.png" type="Texture" id=5]
[ext_resource path="res://Resources/Image/tutorial2.PNG" type="Texture" id=6]

[node name="TutorialScene" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.133333, 0.12549, 0.180392, 1 )

[node name="Step1" type="Node2D" parent="."]

[node name="Title" type="RichTextLabel" parent="Step1"]
margin_top = 104.0
margin_right = 12800.0
margin_bottom = 1304.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 0.968627, 0.537255, 0.321569, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Welcome![/center]"
text = "Welcome!"
scroll_active = false

[node name="Title2" type="RichTextLabel" parent="Step1"]
margin_left = 234.0
margin_top = 264.0
margin_right = 8354.0
margin_bottom = 3264.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Welcome to Rainbow Souls!

The objective of the game is to fulfill 20 potion orders from your customers before they expire.

Each day, you'll be able to plant, harvest, brew potions and fulfill orders.[/center]"
text = "Welcome to Rainbow Souls!

The objective of the game is to fulfill 20 potion orders from your customers before they expire.

Each day, you'll be able to plant, harvest, brew potions and fulfill orders."
scroll_active = false

[node name="Step2" type="Node2D" parent="."]
visible = false

[node name="Title" type="RichTextLabel" parent="Step2"]
margin_top = 72.0
margin_right = 12800.0
margin_bottom = 1272.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 0.968627, 0.537255, 0.321569, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]The farm[/center]"
text = "The farm"
scroll_active = false

[node name="Sprite" type="Sprite" parent="Step2"]
position = Vector2( 640, 560 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 80, 587, 200 )

[node name="Title2" type="RichTextLabel" parent="Step2"]
margin_left = 234.0
margin_top = 200.0
margin_right = 8354.0
margin_bottom = 3200.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]You can see your farm in the middle of the left screen.

Click on an empty spot to plant a new soul plant. You'll have to decide between different plants, each with different costs, production, and grow time.[/center]"
text = "You can see your farm in the middle of the left screen.

Click on an empty spot to plant a new soul plant. You'll have to decide between different plants, each with different costs, production, and grow time."
scroll_active = false

[node name="Step3" type="Node2D" parent="."]
visible = false

[node name="Title" type="RichTextLabel" parent="Step3"]
margin_top = 72.0
margin_right = 12800.0
margin_bottom = 1272.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 0.968627, 0.537255, 0.321569, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Resources[/center]"
text = "Resources"
scroll_active = false

[node name="Title2" type="RichTextLabel" parent="Step3"]
margin_left = 234.0
margin_top = 248.0
margin_right = 8354.0
margin_bottom = 3248.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]You can always check your available resources on the top left of the screen.

Each type of soul can be used to create potions.
Customer orders will require you to brew potions with specific types of souls.[/center]"
text = "You can always check your available resources on the top left of the screen.

Each type of soul can be used to create potions.
Customer orders will require you to brew potions with specific types of souls."
scroll_active = false

[node name="Step4" type="Node2D" parent="."]
visible = false

[node name="Title" type="RichTextLabel" parent="Step4"]
margin_top = 72.0
margin_right = 12800.0
margin_bottom = 1272.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 0.968627, 0.537255, 0.321569, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Brewing[/center]"
text = "Brewing"
scroll_active = false

[node name="Title2" type="RichTextLabel" parent="Step4"]
margin_left = 234.0
margin_top = 248.0
margin_right = 8354.0
margin_bottom = 3738.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Click the Brew option on the left side of the screen to open the brewing screen.

Select the souls you want to use, and then click the Brew button to create the potion.

You can always check what potions you currently have by clicking on the Inventory option.[/center]"
text = "Click the Brew option on the left side of the screen to open the brewing screen.

Select the souls you want to use, and then click the Brew button to create the potion.

You can always check what potions you currently have by clicking on the Inventory option."
scroll_active = false

[node name="Step5" type="Node2D" parent="."]
visible = false

[node name="Title" type="RichTextLabel" parent="Step5"]
margin_top = 72.0
margin_right = 12800.0
margin_bottom = 1272.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 0.968627, 0.537255, 0.321569, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Orders[/center]"
text = "Orders"
scroll_active = false

[node name="Title2" type="RichTextLabel" parent="Step5"]
margin_left = 234.0
margin_top = 232.0
margin_right = 8354.0
margin_bottom = 4532.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]By clicking on the RIGHT side of the screen, you can switch to the Orders screen. To go back to the farm screen, just click on the left side of the screen.

On the orders screen you can see each order you currently have, what the potion requirements are, and the expiration count.

[color=#ff4444]If the expiration count of an order reaches 0, you lose the game.[/color][/center]"
text = "By clicking on the RIGHT side of the screen, you can switch to the Orders screen. To go back to the farm screen, just click on the left side of the screen.

On the orders screen you can see each order you currently have, what the potion requirements are, and the expiration count.

If the expiration count of an order reaches 0, you lose the game."
scroll_active = false

[node name="ColorRect" type="ColorRect" parent="Step5"]
margin_right = 40.0
margin_bottom = 719.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="Step5"]
position = Vector2( 16, 360 )
texture = ExtResource( 5 )

[node name="ColorRect2" type="ColorRect" parent="Step5"]
margin_left = 1240.0
margin_right = 1280.0
margin_bottom = 719.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite2" type="Sprite" parent="Step5"]
position = Vector2( 1264, 360 )
texture = ExtResource( 5 )
flip_h = true

[node name="Step6" type="Node2D" parent="."]
visible = false

[node name="Title" type="RichTextLabel" parent="Step6"]
margin_top = 72.0
margin_right = 12800.0
margin_bottom = 1272.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 0.968627, 0.537255, 0.321569, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Fulfilling Orders[/center]"
text = "Fulfilling Orders"
scroll_active = false

[node name="Title2" type="RichTextLabel" parent="Step6"]
margin_left = 234.0
margin_top = 232.0
margin_right = 8354.0
margin_bottom = 1492.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]To fulfill an order, just click on it and select a potion to deliver. If you don't have any valid potions, you can't fulfill an order.[/center]"
text = "To fulfill an order, just click on it and select a potion to deliver. If you don't have any valid potions, you can't fulfill an order."
scroll_active = false

[node name="Title3" type="RichTextLabel" parent="Step6"]
margin_left = 141.0
margin_top = 559.0
margin_right = 3361.0
margin_bottom = 1819.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[right]This order expires in 2 days[/right]"
text = "This order expires in 2 days"
scroll_active = false

[node name="Title4" type="RichTextLabel" parent="Step6"]
margin_left = 830.0
margin_top = 427.0
margin_right = 4050.0
margin_bottom = 2117.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Requires a potion with at least 3 blue souls and 4 pink ones."
text = "Requires a potion with at least 3 blue souls and 4 pink ones."
scroll_active = false

[node name="Sprite" type="Sprite" parent="Step6"]
position = Vector2( 640, 520 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Step6"]
position = Vector2( 492, 603 )
texture = ExtResource( 5 )
flip_h = true

[node name="Sprite3" type="Sprite" parent="Step6"]
position = Vector2( 793, 473 )
texture = ExtResource( 5 )

[node name="Instructions" type="RichTextLabel" parent="."]
margin_left = 428.0
margin_top = 660.0
margin_right = 9668.0
margin_bottom = 1450.0
rect_scale = Vector2( 0.05, 0.05 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][color=#edf067][LEFT_ARROW][/color] and [color=#edf067][RIGHT_ARROW][/color] to navigate.
[color=#edf067][ESCAPE][/color] to return to the menu.[/center]"
text = "[LEFT_ARROW] and [RIGHT_ARROW] to navigate.
[ESCAPE] to return to the menu."
scroll_active = false
